# platform-cli

./: Procfile  README.md  TECHNICAL_CHANGE_LOG.md  platform.py  platform_supervisor.sh  pyproject.toml  start_platform_hybrid.sh  start_service.sh  topology.yaml
health_monitoring/: __init__.py  health_aggregator.py  metrics.py
macos/: com.aiplatform.supervisor.plist
supervisor/: event_listener.py  supervisord.conf
supervisor/conf.d/: ai-agents.conf  audit-service.conf  cms.conf  code-orchestrator.conf  inference-service.conf  llm-gateway.conf  semantic-search.conf
systemd/: supervisor.service
tests/: __init__.py
tests/unit/: test_health_aggregator.py.bak  test_metrics.py.bak
